<resources>
    <string name="app_name">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_on_chat_register_now">Not on Chat? Register now</string>
    <string name="or_login_with_your">or Login with your</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="already_on_chat_login_now">Already on Chat? Login now</string>
    <string name="find_people">Find People</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="update">Update</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_group">Create Group</string>
    <string name="message">Message</string>
    <string name="send_request">Send Request</string>

</resources>
