<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/login_photo"
                android:scaleType="centerCrop"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_image"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/email"
                android:layout_marginTop="25dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp" />

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:text="@string/forgot_password"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgot_password_link"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="19dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons" />

            <TextView
                android:id="@+id/register_page_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:text="@string/not_on_chat_register_now"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/phone_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_page_link"
                android:text="@string/or_login_with_your"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/phone_login_text"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="19dp"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>