<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_activity"
    tools:context=".VisitProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/visit_profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="110dp"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/visit_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@id/visit_profile_image"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/visit_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_below="@id/visit_profile_username"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Button
                android:id="@+id/send_request_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/visit_profile_status"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/send_request"
                android:textAllCaps="false" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>