<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@drawable/profile_image"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:hint="@string/username"
                android:inputType="textMultiLine"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:padding="6dp"
                android:drawableStart="@drawable/edit_profile"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

            <EditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:hint="@string/status"
                android:inputType="textMultiLine"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:padding="6dp"
                android:drawableStart="@drawable/edit_status"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:layout_centerHorizontal="true"
                android:text="@string/update"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/buttons"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>